2016-10-31  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/cm.py:

	Also import typhon.plots.colors to mimic the old structure completely.

2016-10-31  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/cm: Moved from typhon/cm.

	* typhon/plots/colors.py:

	New module for all color related functions.

	typhon.cm is only used for defining colormaps.

	* typhon/plots/common.py:

	New module for commond functions related to plotting.

	* typhon/plots/plots.py:

	New module to collect functions that actually create plots.

	* typhon/plots/tests/reference, typhon/plots/tests/test_colors.py:

	Moved tests from typhon/cm/tests.

	* typhon/cm.py:

	Alias module to load typhon.plots.cm. A deprecation warning is raised.

	* doc/cm.rst, doc/modules.rst, doc/plots.rst, doc/pyplots/cm_gallery.py,
	doc/pyplots/plot_density.py, doc/pyplots/plot_phase.py,
	doc/pyplots/plot_phase_sinus.py, doc/pyplots/plot_qualitative1.py,
	doc/pyplots/plot_qualitative2.py, doc/pyplots/plot_speed.py,
	doc/pyplots/plot_temperature.py, doc/pyplots/plot_velocity.py,
	doc/pyplots/plot_vorticity.py:

	Adapated new structure in the documentation.

	Fixed imports in all plotting scripts.

2016-10-28  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/__init__.py: Moved all function definitions to common.

	* typhon/arts/common.py: Definitions for common module functions.

2016-10-28  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py: Removed debug print().

2016-10-28  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/__init__.py: Removed refine_grid().

	* typhon/arts/griddedfield.py:

	Added refine_grid() as instance method for GriddedField.

	Extrapolation is no longer enabled by default.

2016-10-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/__init__.py: Added refine_grid().

	Function to refine a grid in a GriddedField. The data is interpolated to
	match the new coordinates.

2016-10-21  Oliver Lemke  <olemke@core-dump.info>
