@@ -15,6 +15,7 @@ if not __TYPHON_SETUP__:
     from . import geodesy
     from . import geographical
     from . import latex
+    from . import math
     from . import oem
     from . import utils
 
